--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -12,7 +12,7 @@ header{
     justify-content: space-between;
     height: 80px;
     padding: 0 40px;
-    border-bottom: 1px solid #bcbcbc;
+    border-bottom: 1px solid var(--line-silver);
 }
 
 .test1>.test2>.test2-1{
