--- a/src/common.css
+++ b/src/common.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200..900&display=swap');
+
 :root {
     --mirage: #1E2F35;
     --salomie: #FFDB88;
+	--font-silber: #9E9E9E;
     --silver: #BDBDBD;
     --line-silver: #BCBCBC;
     --btn-silver: #999;
     --back-silver: #F2F2F2;
     --font-black: #1E1E23;
 }
+
 
 .flex{
 	display: flex;
@@ -21,6 +25,90 @@
 .cFont{
     font-size: 16px;
 }
+
+.mainButtonSalomie{
+	width: 160px;
+	height: 50px;
+	border-radius: 50px;
+	background-color: none;
+	border: 2px solid var(--salomie);
+}
+.mainBtnTextSilver{
+	font-size: 18px;
+	color: var(--salomie);
+}
+.mainBtnSilver{
+	width: 160px;
+	height: 50px;
+	border-radius: 50px;
+	background-color: none;
+	border: 2px solid var(--font-silber);
+}
+.mainBtnTextSilver{
+	font-size: 18px;
+	color: var(--font-silber);
+}
+
+/* 여기서부터 Sub */
+
+.subBtn{
+	width: 187px;
+	height: 45px;
+}
+.subBtnText{
+	font-size: 18px;
+	color: #FFF;
+}
+.subOneDepthBtn{
+	font-size: 24px;
+	font-weight: bold;
+}
+
+.subTop{
+	/* 이미지 사이즈가 가운데로 조여들게끔 만들게하기위해 max-width:none을 채택할지 고민해봐야함. */
+	/* max-width: none; */
+	width: 100%;
+	height: 400px;
+}
+.subPageTopText{
+	display: block;
+	text-align: center;
+	line-height: 400px;
+	color: #FFF;
+	font-size: 50px;
+	font-family: "Noto Serif KR", serif;
+	font-optical-sizing: auto;
+	font-style: normal;
+}
+
+/* 서브페이지 이미지를 개인 파트에 가져가 주세요. */
+.SubFesInfoImage{
+	background-image: url(./assets/SubFesInfoTop.png);
+	background-repeat: none;
+	background-position: center;
+}
+.SubNotiTop{
+	background-image: url(./assets/);
+	background-repeat: none;
+	background-position: center;
+}
+.SubGalleryTop{
+	background-image: url(./assets/);
+	background-repeat: none;
+	background-position: center;
+}
+.SubTourInfoTop{
+	background-image: url(./assets/);
+	background-repeat: none;
+	background-position: center;
+}
+.SubSupportTop{
+	background-image: url(./assets/);
+	background-repeat: none;
+	background-position: center;
+}
+/* 여기까지 이미지 */
+
 
 /* main 반응형 */
 @media screen and (max-width : 1920px) {
@@ -42,27 +130,68 @@
 
 @media screen and (max-width : 768px) {
 	.default_content {
-		margin: 65px px;
+		margin: 65px;
+	}
+	.mainButtonSalomie{
+		width: 120px;
+		height: 36px;
+		border-radius: 50px;
+		background-color: none;
+		border: 1px solid var(--salomie);
+	}
+	.mainButtonSilver{
+		width: 120px;
+		height: 36px;
+		border-radius: 50px;
+		background-color: none;
+		border: 1px solid var(--font-silber);
+	}
+	.mainButtonTextSilver{
+		font-size: 16px;
+		color: var(--salomie);
+	}
+	.mainButtonTextSilver{
+		font-size: 16px;
+		color: var(--font-silber);
 	}
 }
 
 @media screen and (max-width : 500px) {}
+
+
+
+
 
 /* Sub Page 반응형*/
 @media screen and (max-width : 1440px) {
 	.default_content {
 		margin: 65px 0;
 	}
-
 	.calcWidth {
 		width: calc(100% - 30px);
 	}
+	.subTop{
+		height: 300px;
+	}
+	.subPageTopText{
+		font-size: 45px;
+		line-height: 300px;
+	}
+
 }
 
 @media screen and (max-width : 1024px) {
 	.default_content {
 		margin: 65px 0;
 	}
+	.subTop{
+		height: 210px;
+	}
+	.subPageTopText{
+		font-size: 38px;
+		line-height: 210px;
+	}
+
 }
 
 @media screen and (max-width : 768px) {
@@ -78,6 +207,24 @@
     .cFont{
         font-size: 14px;
     }
+	.subButton{
+		width: 150px;
+		height: 40px;
+	}
+	.subButtonText{
+		font-size: 14px;
+		font-weight: bold;
+	}
+	.subTop{
+		height: 210px;
+	}
+	.subPageTopText{
+		font-size: 30px;
+	}
 }
 
-@media screen and (max-width : 500px) {}
+@media screen and (max-width : 500px) {
+	.subTop{
+		height: 210px;
+	}
+}
