--- a/src/common.css
+++ b/src/common.css
@@ -159,7 +159,7 @@
 
 @media screen and (max-width : 768px) {
 	.defaultContent {
-		margin: 65px;
+		margin: 65px 20px;
 	}
 	.mainBtnSalomie{
 		width: 120px;
