--- a/src/pages/main/sec3-5_fseInfo/fesInfo.css
+++ b/src/pages/main/sec3-5_fseInfo/fesInfo.css
@@ -53,20 +53,30 @@
         padding-top: 15px;
     }
     .startWrap{
-        padding-top: 100px;
+        padding-top: 80px;
     }
     .startWrap h5{
         font-size: 85px;
     }
+    .infoArraw{
+        padding-top: 60px;
+    }
+    .infoArraw div:nth-child(2){
+        bottom: -38px;
+    }
 }
 
 @media screen and (max-width : 1024px) {
+    .infoArraw{
+        width: 105px; height: 105px;
+    }
     .infoArraw div:first-child{
         width: 85px;
         height: 85px;
     }
     .infoArraw div:nth-child(2){
-        bottom: -48px;
+        width: 130px;
+        bottom: -38px;
     }
 }
 
@@ -84,6 +94,7 @@
         font-size: 60px;
     }
     .infoArraw{
+        width: 75px; height: 75px;
         padding-top: 40px;
     }
     .infoArraw div:first-child{
@@ -93,7 +104,7 @@
     .infoArraw div:nth-child(2){
         width: 100px;
         left: 2px;
-        bottom: 22px;
+        bottom: -18px;
     }
 	
 }
@@ -108,5 +119,17 @@
     }
     .startWrap h5{
         font-size: 36px;
+    }
+    .infoArraw{
+        width: 55px; height: 55px;
+        padding-top: 20px;
+    }
+    .infoArraw div:first-child{
+        width: 35px;
+        height: 35px;
+    }
+    .infoArraw div:nth-child(2){
+        width: 60px;
+        bottom: 2px;
     }
 }
