--- a/src/common.css
+++ b/src/common.css
@@ -30,28 +30,40 @@
 .cFont{
     font-size: 16px;
 }
-
+/* 메인 버튼 살로미색상 */
 .mainBtnSalomie{
+	font-size:18px;
 	width: 160px;
 	height: 50px;
 	border-radius: 50px;
-	background-color: none;
-	border: 2px solid var(--salomie);
-}
-.mainBtnTextSalomie{
-	font-size: 18px;
 	color: var(--salomie);
+	background-color: var(--mirage);
+	border: 2px solid var(--salomie);
+	cursor: pointer;
 }
+.mainBtnSalomie:hover{
+	background-color: var(--salomie);
+	color: var(--mirage);
+	font-weight: bold;
+	border:none
+}
+
+/* 메인버튼 실버색상 */
 .mainBtnSilver{
+	font-size: 18px;
 	width: 160px;
 	height: 50px;
 	border-radius: 50px;
-	background-color: none;
-	border: 2px solid var(--font-silber);
-}
-.mainBtnTextSilver{
-	font-size: 18px;
 	color: var(--font-silber);
+	background-color: #fff;
+	border: 2px solid var(--font-silber);
+	cursor: pointer;
+}
+.mainBtnSilver:hover{
+	background-color: var(--font-silber);
+	color: #fff;
+	font-weight: bold;
+	border: none;
 }
 
 .textEllipsis{
@@ -142,24 +154,24 @@
 /* main 반응형 */
 @media screen and (max-width : 1920px) {
 	.defaultContent {
-		margin: 110px 120px;
+		padding: 110px 120px;
 	}
 }
 @media screen and (max-width : 1280px) {
 	.defaultContent {
-		margin: 110px 80px;
+		padding: 110px 80px;
 	}
 }
 
 @media screen and (max-width : 1024px) {
 	.defaultContent {
-		margin: 65px 80px;
+		padding: 65px 80px;
 	}
 }
 
 @media screen and (max-width : 768px) {
 	.defaultContent {
-		margin: 65px;
+		padding: 20px 65px;
 	}
 	.mainBtnSalomie{
 		width: 120px;
@@ -167,6 +179,8 @@
 		border-radius: 50px;
 		background-color: none;
 		border: 1px solid var(--salomie);
+		font-size: 16px;
+		color: var(--salomie);
 	}
 	.mainButtonSilver{
 		width: 120px;
@@ -174,18 +188,12 @@
 		border-radius: 50px;
 		background-color: none;
 		border: 1px solid var(--font-silber);
-	}
-	.mainButtonTextSilver{
-		font-size: 16px;
-		color: var(--salomie);
-	}
-	.mainButtonTextSilver{
 		font-size: 16px;
 		color: var(--font-silber);
 	}
 }
 
-@media screen and (max-width : 500px) {}
+/* @media screen and (max-width : 500px) {} */
 
 
 
@@ -194,12 +202,12 @@
 /* Sub Page 반응형*/
 @media screen and (max-width : 1920px) {
 	.subDefaultContent {
-		margin: 110px 120px;
+		padding: 110px 120px;
 	}
 }
 @media screen and (max-width : 1440px) {
 	.subDefaultContent {
-		margin: 65px 0;
+		padding: 65px 0;
 	}
 	.calcWidth {
 		width: calc(100% - 30px);
@@ -216,7 +224,7 @@
 
 @media screen and (max-width : 1024px) {
 	.subDefaultContent {
-		margin: 65px 0;
+		padding: 65px 0;
 	}
 	.subTop{
 		height: 210px;
@@ -230,7 +238,7 @@
 
 @media screen and (max-width : 768px) {
 	.subDefaultContent {
-		margin: 28px 0;
+		padding: 28px 0;
 	}
     .mFont{
         font-size: 18px;
