--- a/src/pages/main/sec3-5_fseInfo/fesInfo.css
+++ b/src/pages/main/sec3-5_fseInfo/fesInfo.css
@@ -57,11 +57,15 @@
     font-size: 100px;
     font-weight: 300;
 }
+.fesInfoTxt h2:first-child{
+    padding-bottom: 20px;
+}
 .fesInfoTxt p{
     padding-top: 15px;
     color: white;
     font-size: 18px;
 }
+
 
 
 /* 반응형 */
