--- a/src/pages/main/Sec7_Gallery/mainGallery.css
+++ b/src/pages/main/Sec7_Gallery/mainGallery.css
@@ -1,4 +1,70 @@
-section{
+.mainGallery{
     width: 100%; height: 100vh;
+    background-color: var(--line-silver);
+    padding: 110px 0;
+    text-align: center;
+}
+
+.mainGallery>h1{
+    font-size: 55px;
+    font-weight: bold;
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+.mainGallery>p{
+    font-size: 18px;
+    color: #fff;
+}
+
+.mainGallery>.galleryBtn{
+    display: flex;
+    gap: 45px;
+    align-items: center;
+    justify-content: center;
+    margin: 45px 0 60px;
+}
+
+.mainGallery>.galleryslide>div{
+    overflow: hidden;
+}
+
+.mainGallery>.galleryslide>div:first-child{
+    margin-bottom: 20px;
+}
+
+.mainGallery>.galleryslide>div>ul{
+    width: 100%; height: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.mainGallery>.galleryslide>div>ul>li{
+    width: 358px; height: 287px;
+    border-radius: 10px;
+    background-color: var(--mirage);
+    border: 1px solid var(--line-silver);
+}
+
+
+/* Swiper ver */
+
+.mainGallery>.galleryslide>.swiper{
+    overflow: hidden;
+}
+
+.mainGallery>.galleryslide>.swiper>.swiper-wrapper{
+    width: 100%; height: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide{
+    width: 358px; height: 287px;
+    border-radius: 10px;
+    background-color: var(--mirage);
+    border: 1px solid var(--line-silver);
 }
 
