aos 모바일 끄기

--- a/src/pages/main/sec3-5_fesInfo/fesInfo.css
+++ b/src/pages/main/sec3-5_fesInfo/fesInfo.css
@@ -244,6 +244,11 @@
     .fesInfo2 .fesInfoBtn{
         position: relative;
     }
+    /* [data-aos] {
+        pointer-events: auto !important;
+        opacity: 1 !important;
+        transform: none !important;
+      } */
 }
 
 @media screen and (max-width : 500px) {
