서브페이지 서브타이틀 컴포넌트 여백수정

--- a/src/components/lineTit.css
+++ b/src/components/lineTit.css
@@ -1,6 +1,6 @@
 .greenLine{
     margin: 0 auto;
-    width: 90%;
+    width: 1440px;
     border-top: 2px solid var(--mirage);
     border-bottom: 2px solid var(--mirage);
     position: relative;
