comon 모바일반응형, 서브타이틀 컴포넌트 수정

--- a/src/common.css
+++ b/src/common.css
@@ -212,11 +212,12 @@
 	.subDefaultContent {
 		padding: 65px 0;
 		width: 1440px;
+		margin: 0 auto;
 	}
 }
 @media screen and (max-width : 1440px) {
 	.subDefaultContent {
-		padding: 65px 0;
+		width: 0;
 	}
 	.calcWidth {
 		width: calc(100% - 30px);
@@ -232,9 +233,6 @@
 }
 
 @media screen and (max-width : 1024px) {
-	.subDefaultContent {
-		padding: 65px 0;
-	}
 	.subTop{
 		height: 210px;
 	}
@@ -247,7 +245,7 @@
 
 @media screen and (max-width : 768px) {
 	.subDefaultContent {
-		padding: 65px 20px;
+		padding: 28px 0;
 	}
     .mFont{
         font-size: 18px;
