--- a/src/components/subFesInfoCom.css
+++ b/src/components/subFesInfoCom.css
@@ -99,30 +99,19 @@
     justify-content: space-around;
     gap: 15px;
 }
-.ticketWrap ul li{
-    padding-bottom: 28px;
-}
-.ticketWrap ul li span{
+.ticketWrap h4{
     font-weight: bold;
     padding-right: 10px;
 }
-.ticDate{
-    text-align: end;
-    padding-right: 9px;
-    padding-top: 10px;
+.ticketWrap p{
+    padding-bottom: 10px;
 }
-.ticDate2{
-    padding-right: 52px;
-}
-.ticID{
+.ticketWrap h6{
     font-size: 14px;
-    padding-top: 5px;
+    font-weight: 400;
 }
-.ticWay{
-    padding-left: 72px;
-}
-.ticWay>div{
-    padding-top: 10px;
+.ticCont{
+    padding-bottom: 28px;
 }
 .ticBtnWrap{
     padding-top: 110px;
@@ -147,6 +136,9 @@
 @media screen and (max-width : 1280px) {
     .ticketWrap{
         justify-content: space-between;
+    }
+    .ticTit{
+        width: 97px;
     }
     .ticBtnWrap{
         padding-top: 65px;
@@ -209,20 +201,15 @@
     .ticketWrap{
         flex-direction: column;
     }
-    .ticketWrap ul li{
+    .ticketWrap h4{
+       font-size: 14px;
+    }
+    .ticketWrap p{
         font-size: 14px;
+        padding: 0;
+    }
+    .ticCont{
         padding-bottom: 15px;
-    }
-    .ticDate{
-        text-align: start;
-        padding-right: 0;
-        padding-left: 65px;
-    }
-    .ticDate2{
-        padding-right: 0;
-    }
-    .ticWay{
-        padding-left: 65px;
     }
     .ticBtnWrap{
         padding-top: 28px;
