--- a/src/components/subFesInfoCom.css
+++ b/src/components/subFesInfoCom.css
@@ -119,14 +119,15 @@
 }
 .ticBtn{
     background-color: var(--mirage);
-    color: white;
-    font-size: 18px;
     outline: none;
     border: none;
     width: 160px;
     line-height: 50px;
     border-radius: 50px;
-    cursor: pointer;
+}
+.ticBtn a{
+    color: white;
+    font-size: 18px;
 }
 
 /* 반응형*/
@@ -215,9 +216,11 @@
         padding-top: 28px;
     }
     .ticBtn{
-        font-size: 16px;
         width: 120px;
         line-height: 36px;
+    }
+    .ticBtn a{
+        font-size: 16px;
     }
 }
 @media screen and (max-width : 500px) {
