--- a/src/components/subFesInfoCom.css
+++ b/src/components/subFesInfoCom.css
@@ -79,30 +79,20 @@
     font-weight: bold;
     padding-right: 5px;
 }
-.KtourWrap{
+.tourWrap{
     padding-top: 30px;
     justify-content: center;
     gap: 30px;
+    overflow: hidden;
 }
-.KtalkWrap{
-    padding-top: 30px;
-}
-.KtalkWrap img{
-    width: 100%;
+.tourWrap img{
+    width: 50%;
 }
 .Ktalk{
     padding-top: 30px;
-    justify-content: space-between;
-    gap: 30px;
 }
-/* .Ktalk img{
+.Ktalk img{
     width: 100%;
-} */
-.CtalkWrap{
-    gap: 30px;
-}
-.CtalkWrap img{
-    width: 90%;
 }
 
 /* 예매안내 */
@@ -142,16 +132,9 @@
 }
 
 /* 반응형*/
-@media screen and (max-width : 1440px) {
-
+@media screen and (max-width : 1920px) {
 }
 @media screen and (max-width : 1280px) {
-    .KtourWrap img{
-        width: 45%;
-    }
-    .Ktalk img{
-        width: 48%;
-    }
     .ticketWrap{
         justify-content: space-between;
     }
@@ -167,12 +150,6 @@
     }
 }
 @media screen and (max-width : 768px) {
-    .KtourWrap img{
-        width: 100%;
-    }
-    .Ktalk img{
-        width: 100%;
-    }
     .subInfoWrap{
         flex-direction: column;
         gap: 28px;
@@ -214,20 +191,20 @@
         font-size: 14px;
         padding-right: 15px;
     }
-    .KtourWrap{
+    .tourWrap{
         flex-direction: column;
         padding-top: 20px;
         gap: 20px;
     }
-    .KtalkWrap{
-        padding-top: 20px;
+    .tourWrap img{
+        width: 100%;
     }
     .Ktalk{
-        flex-direction: column;
-        gap: 20px;
+        padding-top: 20px;
     }
-    .CtalkWrap{
+    .CtourWrap{
         flex-direction: column;
+        padding-top: 20px;
         gap: 20px;
     }
     .ticketWrap{
