--- a/src/pages/main/Sec7_Gallery/mainGallery.css
+++ b/src/pages/main/Sec7_Gallery/mainGallery.css
@@ -29,10 +29,6 @@
     overflow: hidden;
 }
 
-.mainGallery>.galleryslide>div:first-child{
-    margin-bottom: 20px;
-}
-
 .mainGallery>.galleryslide>div>ul{
     width: 100%; height: 100%;
     display: flex;
@@ -51,20 +47,34 @@
 /* Swiper ver */
 
 .mainGallery>.galleryslide>.swiper{
-    overflow: hidden;
+    width: 100%; height: 100%;
+    position: relative;
 }
 
 .mainGallery>.galleryslide>.swiper>.swiper-wrapper{
     width: 100%; height: 100%;
     display: flex;
-    justify-content: center;
-    gap: 20px;
+    transition-timing-function: linear;
+    transition-duration: 6000ms;
+    transform: translate3d(0, 0, 0);
+    position: relative;
 }
 
 .mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide{
-    width: 358px; height: 287px;
-    border-radius: 10px;
+    margin-right: 0 !important;
+    transform: translate3d(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto; height: 287px;
+    position: relative;
+    padding: 10px;
+    background-color: transparent;
+}
+
+.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a{
+    width: 100%; height: 100%;
     background-color: var(--mirage);
-    border: 1px solid var(--line-silver);
+    border-radius: 10px;
 }
 
