--- a/src/components/onedep.css
+++ b/src/components/onedep.css
@@ -19,3 +19,10 @@
     background-color: var(--font-black);
     margin-top: 5px;
 }
+@media screen and (max-width : 768px) {
+    .oneDep{
+        margin: 0 auto;
+        justify-content: center;
+        padding: 28px 0;
+    }
+}
