구글 소셜 로그인 기능 시도중, 서브페이지 제작 돌입 전

--- a/src/common.css
+++ b/src/common.css
@@ -12,6 +12,11 @@
     --font-black: #1E1E23;
 }
 
+*{
+	font-family: "Noto Sans", sans-serif;
+}
+
+
 .flex{
 	display: flex;
 }
@@ -25,6 +30,134 @@
 .cFont{
     font-size: 16px;
 }
+/* 메인 버튼 살로미색상 */
+.mainBtnSalomie{
+	font-size:18px;
+	width: 160px;
+	height: 50px;
+	border-radius: 50px;
+	color: var(--salomie);
+	background-color: var(--mirage);
+	border: 2px solid var(--salomie);
+	cursor: pointer;
+}
+.mainBtnSalomie:hover{
+	background-color: var(--salomie);
+	color: var(--mirage);
+	font-weight: bold;
+	border:none
+}
+
+/* 메인버튼 실버색상 */
+.mainBtnSilver{
+	font-size: 18px;
+	width: 160px;
+	height: 50px;
+	border-radius: 50px;
+	color: var(--font-silber);
+	background-color: #fff;
+	border: 2px solid var(--font-silber);
+	cursor: pointer;
+}
+.mainBtnSilver:hover{
+	background-color: var(--font-silber);
+	color: #fff;
+	font-weight: bold;
+	border: none;
+}
+
+.textEllipsis{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+/* 여기서부터 Sub */
+
+.oneDepthBtn{
+	cursor: pointer;
+	font-size: 24px;
+	font-weight: bold;
+}
+.twoDepthBtn{
+	width: 187px;
+	height: 45px;
+	font-size: 18px;
+	color: #FFF;
+	line-height: 45px;
+	text-align: center;
+}
+
+.subTop{
+	/* 이미지 사이즈가 가운데로 조여들게끔 만들게하기위해 max-width:none을 채택할지 고민해봐야함. */
+	/* max-width: none; */
+	width: 100%;
+	height: 400px;
+}
+.subTopText{
+	display: block;
+	text-align: center;
+	line-height: 400px;
+	color: #FFF;
+	font-size: 50px;
+	font-family: "Noto Serif KR", serif;
+	font-optical-sizing: auto;
+	font-style: normal;
+}
+
+/* 서브페이지 이미지를 개인 파트에 가져가 주세요. */
+.subFesInfoImage{
+	background-image: url(./assets/SubFesInfoTop.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.subNotiTop{
+	background-image: url(./assets/);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.subGalleryTop{
+	background-image: url(./assets/);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.subTourInfoTop{
+	background-image: url(./assets/);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.subSupportTop{
+	background-image: url(./assets/);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+/* 여기까지 이미지 */
+
+.subSearch{
+	width: 350px;
+	height: 40px;
+}
+.subSearchBtn{
+	width: 40px;
+	height: 40px;
+	background-color: var(--mirage);
+	background-image: url(./assets/searchWhite.svg);
+	background-repeat: no-repeat;
+	background-size: 24px;
+	background-position: center;
+	border: 0;
+}
+
+.subBtn{
+	width: 124px;
+	height: 39px;
+	font-size: 17px;
+	color: #fff;
+	background-color: var(--mirage);
+	border: none;
+	cursor: pointer;
+}
+
 
 /* main 반응형 */
 @media screen and (max-width : 1920px) {
@@ -45,12 +178,34 @@
 }
 
 @media screen and (max-width : 768px) {
-	.default_content {
-		margin: 65px px;
+	.defaultContent {
+		padding: 65px 20px;
+	}
+	.mainBtnSalomie{
+		width: 120px;
+		height: 36px;
+		border-radius: 50px;
+		background-color: none;
+		border: 1px solid var(--salomie);
+		font-size: 16px;
+		color: var(--salomie);
+	}
+	.mainButtonSilver{
+		width: 120px;
+		height: 36px;
+		border-radius: 50px;
+		background-color: none;
+		border: 1px solid var(--font-silber);
+		font-size: 16px;
+		color: var(--font-silber);
 	}
 }
 
-@media screen and (max-width : 500px) {}
+/* @media screen and (max-width : 500px) {} */
+
+
+
+
 
 /* Sub Page 반응형*/
 @media screen and (max-width : 1920px) {
@@ -64,6 +219,14 @@
 	.subDefaultContent {
 		width: calc(100% - 30px);
 	}
+	.subTop{
+		height: 300px;
+	}
+	.subTopText{
+		font-size: 45px;
+		line-height: 300px;
+	}
+
 }
 
 @media screen and (max-width : 1024px) {
@@ -74,6 +237,7 @@
 		font-size: 38px;
 		line-height: 210px;
 	}
+
 }
 
 @media screen and (max-width : 768px) {
@@ -89,6 +253,26 @@
     .cFont{
         font-size: 14px;
     }
+	.subTop{
+		height: 210px;
+	}
+	.subTopText{
+		font-size: 30px;
+	}
+	.oneDepthBtn{
+		font-size: 18px;
+	}
+	.twoDepthBtn{
+		width: 150px;
+		height: 40px;
+		font-size: 14px;
+		line-height: 40px;
+	}
+	.subBtn{
+		width: 100px;
+		height: 32px;
+		font-size: 14px;
+	}
 }
 
 @media screen and (max-width : 500px) {
