sec4-5 이미지 수정

--- a/src/pages/main/sec3-5_fesInfo/fesInfo.css
+++ b/src/pages/main/sec3-5_fesInfo/fesInfo.css
@@ -202,12 +202,7 @@
         order: 0;
     }
     .fesInfoWrap>div:first-child{
-        width: 250px;
         margin: 0 auto;
-    }
-    .fesInfoWrap img{
-        width: 250px;
-        height: 300px;
     }
     .fesInfoTxt h2{
         font-size: 40px;
@@ -273,5 +268,9 @@
     .infoArraw div:nth-child(2){
         width: 60px;
         bottom: 2px;
+    }
+    .fesInfoWrap img{
+        width: 100%;
+        height: auto;
     }
 }
