원뎁스, 서브탑 컴포넌트 수정생성

--- a/src/components/onedep.css
+++ b/src/components/onedep.css
@@ -19,11 +19,17 @@
     background-color: var(--font-black);
     margin-top: 5px;
 }
+.oneDeptit{
+    font-size: 24px;
+}
 @media screen and (max-width : 768px) {
     .oneDep{
         margin: 0 auto;
         justify-content: center;
         padding: 28px 0;
+        gap: 28px;
     }
-    
+    .oneDeptit{
+        font-size: 16px;
+    }
 }
