--- a/src/common.css
+++ b/src/common.css
@@ -141,6 +141,7 @@
 .subSearch{
 	width: 350px;
 	height: 40px;
+	padding: 0 10px;
 }
 .subSearchBtn{
 	width: 40px;
@@ -151,6 +152,7 @@
 	background-size: 24px;
 	background-position: center;
 	border: 0;
+	cursor: pointer;
 }
 
 .subBtn{
