--- a/src/pages/subPages/faq/faq.css
+++ b/src/pages/subPages/faq/faq.css
@@ -1,3 +1,8 @@
+.faqSec{
+    width: 1440px;
+    margin: 0 auto;
+    padding-bottom: 65px;
+}
 .faqTopLine{
     display: block;
     border: 2px solid var(--font-black);
@@ -24,4 +29,18 @@
 .fans p{
     padding: 20px;
     min-height: 85px;
+}
+.faqPage{
+    padding-top: 28px;
+}
+.faqSearch{
+    justify-content: center;
+    align-items: center;
+    padding-top: 28px;
+}
+@media screen and (max-width : 1440px) {
+    .faqSec{
+        width: calc(100% - 30px);
+        padding-bottom: 28px;
+    }
 }
