--- a/src/components/onedep.css
+++ b/src/components/onedep.css
@@ -19,6 +19,41 @@
     background-color: var(--font-black);
     margin-top: 5px;
 }
+.oneDeptit{
+    font-size: 24px;
+}
+@media screen and (max-width : 768px) {
+    .oneDep{
+        margin: 0 auto;
+        justify-content: center;
+        padding: 28px 0;
+        gap: 28px;
+    }
+    .oneDeptit{
+        font-size: 16px;
+    }
+}
+.oneDep{
+    margin: 0 auto;
+    justify-content: center;
+    gap: 65px;
+    padding: 65px 0;
+}
+.oneDep li{
+    color: var(--font-black);
+    cursor: pointer;
+}
+.check{
+    font-weight: bold;
+}
+.check::after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: var(--font-black);
+    margin-top: 5px;
+}
 @media screen and (max-width : 768px) {
     .oneDep{
         margin: 0 auto;
