--- a/src/pages/subPages/way/Way.css
+++ b/src/pages/subPages/way/Way.css
@@ -198,6 +198,9 @@ p.red{
     .cFont{
         font-size: 14px;
     }
+    .subDefaultContent{
+        font-size: 13px;
+    }
 }
 
 @media screen and (max-width : 500px) {
